--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">TimeFor</string>
     <string name="action_settings">Settings</string>
     <string name="add_button">Добавить</string>
+    <string name="time85">408</string>
 </resources>
