изменение каталога услуг

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TimeFor</string>
+    <string name="app_name">408</string>
     <string name="action_settings">Settings</string>
     <string name="add_button">Добавить</string>
     <string name="time85">408</string>
